# IRMS

./: .gitignore  .pylintrc  BACKLOG.md  GEMINI.md  NO3.ipynb  README.md  Water_18O_Report.html  Water_18O_Report.xlsx  Water_2H_Report.html  Water_2H_Report.xlsx  example_workflow.ipynb  file_structure.md  pyproject.toml  replication_water.ipynb  requirements.txt  setup.py  water_isotopes_example.ipynb  workflow.ipynb
.github/workflows/: main.yml  pylint.yml
DATA/: datos 2H y 18O procesados.xlsx  nitrate 26112025.xls
isotools/: __init__.py  calibration.py  config.py  core.py  file_structure.md  models.py  processors.py  reporting.py  schemas.py  standards.py  strategies.py  visualization.py
isotools/reporting/: html.py
isotools/reporting/templates/: single_isotope.html
isotools/strategies/: __init__.py  abstract.py  normalization.py
isotools/utils/: __init__.py  kragten.py  readers.py
tests/: test_calibration.py  test_core.py  test_drift.py  test_processors.py  test_readers.py  test_report_parameters.py  test_reporting.py  test_strategies.py
